--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
-    <button class="change-size">Change Grid Size</button>
     <div class="container"></div>
+    <div class="button-container">
+        <button class="change-size">Change Grid Size</button>
+        <button class="clear-size">Clear</button>
+    </div>
+    
+
 
     <script src="script.js"></script>
 </body>
