--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <button class="change-size">Change Grid Size</button>
         <button class="clear-size">Clear</button>
     </div>
+
+    <footer>
+        <p>Done By Samama Karim || Odin Project</p>
+    </footer>
+    
     
 
 
